styles.css
/* styles.css */

/* General Style */

* {
    background-color: darkslategray;
    color: aquamarine;
}

h1 {
    text-align: center;
    font-family: system-ui, -apple-system, 
        BlinkMacSystemFont, 'Segoe UI', Roboto, 
        Oxygen, Ubuntu, Cantarell, 'Open Sans', 
        'Helvetica Neue', sans-serif;
}

p {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    color: orangered;
}

li {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 
    'Lucida Grande', 'Lucida Sans Unicode', Geneva, 
    Verdana, sans-serif;
    color: burlywood;
}

img {
    display:block;
    height: auto;
    width: 600px;
    margin-left: auto;
    margin-right: auto;
}

a {
    color: burlywood;
}

/* Index.html */
.gadget-list-item {
    text-align: center;
}

